Fixed recursive beacon breaking and added ProtectedInteractionResult